Update derivatives.qmd some typos.

--- a/quarto/derivatives/derivatives.qmd
+++ b/quarto/derivatives/derivatives.qmd
@@ -515,7 +515,7 @@ This example shows a useful template:
 
 
 \begin{align*}
-[2x^2 - \frac{x}{3} + 3e^x]' & = 2[\square]' - \frac{[\square]]}{3} + 3[\square]'\\
+[2x^2 - \frac{x}{3} + 3e^x]' & = 2[\square]' - \frac{[\square]'}{3} + 3[\square]'\\
 &= 2[x^2]' - \frac{[x]'}{3} + 3[e^x]'\\
 &= 2(2x) - \frac{1}{3} + 3e^x\\
 &= 4x - \frac{1}{3} + 3e^x
@@ -552,7 +552,7 @@ This example shows a useful template for the product rule:
 ### Quotient rule
 
 
-The derivative of $f(x) = u(x)/v(x)$ - a ratio of functions - can be similarly computed. The result will be $[u/v]' = (u'v - uv')/u^2$:
+The derivative of $f(x) = u(x)/v(x)$ - a ratio of functions - can be similarly computed. The result will be $[u/v]' = (u'v - uv')/v^2$:
 
 
 ```{julia}
@@ -609,7 +609,7 @@ The same $u$ and $v$ my be identified. The quotient rule readily applies to yiel
 
 
 $$
-f'(x) = u'v - uv' = \frac{\cos(x) \cdot (1 + x^2) - (1 + \sin(x)) \cdot (2x)}{(1+x^2)^2}.
+f'(x) = \frac{u'v - uv'}{v^2} = \frac{\cos(x) \cdot (1 + x^2) - (1 + \sin(x)) \cdot (2x)}{(1+x^2)^2}.
 $$
 
 ---
@@ -653,7 +653,7 @@ This pattern generalizes, clearly, to:
 
 
 $$
-[f_1\cdot f_2 \cdots f_n]' = f_1' f_2 \cdots f_n + f_1 \cdot f_2' \cdot (f_3 \cdots f_n) + \dots +
+[f_1\cdot f_2 \cdots f_n]' = f_1' f_2 \cdots f_n + f_1 \cdot f_2' \cdot f_3 \cdots f_n + \dots +
 f_1 \cdots f_{n-1} \cdot f_n'.
 $$
 
@@ -777,14 +777,14 @@ $$
 ---
 
 
-Find the derivative of $\log(2 + \sin(x))$. This is a composition $\log(x)$ – with derivative $1/x$ and  $2 + \sin(x)$ – with derivative $\cos(x)$. We get $(1/\sin(x)) \cos(x)$.
+Find the derivative of $\log(2 + \sin(x))$. This is a composition $\log(x)$ – with derivative $1/x$ and  $2 + \sin(x)$ – with derivative $\cos(x)$. We get $(1/(2 + \sin(x))) \cos(x)$.
 
 
 In general,
 
 
 $$
-[\log(f(x))]' \frac{f'(x)}{f(x)}.
+[\log(f(x))]' = \frac{f'(x)}{f(x)}.
 $$
 
 ---
@@ -835,8 +835,8 @@ Rearranging:
 
 
 $$
-f(g(a+h)) - f(g(a)) - f'(g(a)) g'(a) h = f'(g(a))\epsilon_g(h))h + \epsilon_f(h')(h') =
-(f'(g(a)) \epsilon_g(h)  + \epsilon_f(h')( (g'(a) + \epsilon_g(h))))h =
+f(g(a+h)) - f(g(a)) - f'(g(a)) g'(a) h = f'(g(a))\epsilon_g(h)h + \epsilon_f(h')(h') =
+(f'(g(a)) \epsilon_g(h)  + \epsilon_f(h') (g'(a) + \epsilon_g(h)))h =
 \epsilon(h)h,
 $$
 
@@ -846,7 +846,7 @@ where $\epsilon(h)$ combines the above terms which go to zero as $h\rightarrow 0
 ##### The "chain" rule
 
 
-The chain rule name could also be simply the "composition rule," as that is the operation the rule works for. However, in practice, there are usually *multiple* compositions, and the "chain" rule is used to chain together the different pieces. To get a sense, consider a triple composition $u(v(w(x())))$. This will have derivative:
+The chain rule name could also be simply the "composition rule," as that is the operation the rule works for. However, in practice, there are usually *multiple* compositions, and the "chain" rule is used to chain together the different pieces. To get a sense, consider a triple composition $u(v(w(x)))$. This will have derivative:
 
 
 
@@ -1318,7 +1318,7 @@ Compute the derivative of $x^e$ using `limit`. What do you get?
 #| hold: true
 #| echo: false
 choices = ["``e^x``", "``x^e``", "``(e-1)x^e``", "``e x^{(e-1)}``", "something else"]
-answ = 5
+answ = 4
 radioq(choices, answ, keep_order=true)
 ```
 
@@ -1418,7 +1418,7 @@ Consider the function $f$ and its transformation $g(x) = f(x - a)$ (shift right 
 yesnoq("no")
 ```
 
-Consider the function $f$ and its transformation $g(x) = f(x - a)$ (shift right by $a$). Is $f'$ at $x$ equal to $g'$ at $x-a$?
+Consider the function $f$ and its transformation $g(x) = f(x - a)$ (shift right by $a$). Is $g'$ at $x$ equal to $f'$ at $x-a$?
 
 
 ```{julia}
@@ -1511,7 +1511,7 @@ answ = 3
 radioq(choices, answ)
 ```
 
-##### Question
+###### Question
 
 
 Their are $6$ trig functions. The derivatives of $\sin(x)$ and $\cos(x)$ should be memorized. The others can be derived if not memorized using the quotient rule or chain rule.
@@ -1531,7 +1531,7 @@ trig_choices = [
 radioq(trig_choices, 1)
 ```
 
-What is $[\cot(x)]'$? (Use $\tan(x) = \cos(x)/\sin(x)$.)
+What is $[\cot(x)]'$? (Use $\cot(x) = \cos(x)/\sin(x)$.)
 
 
 ```{julia}
@@ -1555,7 +1555,7 @@ What is $[\csc(x)]'$? (Use $\csc(x) = 1/\sin(x)$.)
 radioq(trig_choices, 4)
 ```
 
-##### Question
+###### Question
 
 
 Consider this picture of composition:
@@ -1598,9 +1598,8 @@ Assuming the approximation gets better for $h$ close to $0$, as it visually does
 \begin{align*}
 \frac{d(f\circ g)}{dx}\mid_{x=1}
 &= \lim_{h\rightarrow 0} \frac{f(g(1) + g'(1)h)-f(g(1))}{h}\\
-&= \lim_{h\rightarrow 0} \frac{f(g(1) + g'(1)h)-f(g(1))}{h}\\
 &= \lim_{h\rightarrow 0} \frac{f(g(1) + g'(1)h)-f(g(1))}{g'(1)h} \cdot g'(1)\\
-&= \lim_{h\rightarrow 0} (f\circ g)'(1) \cdot g'(1).
+&= \lim_{h\rightarrow 0} (f\circ g)'(g(1)) \cdot g'(1).
 \end{align*}
 
 
